@@ -1,11 +1,13 @@
 package com.in28minutes.springboot.controller;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import com.in28minutes.springboot.model.Course;
+import com.in28minutes.springboot.service.StudentService;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,79 +18,68 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.RequestBuilder;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
-import com.in28minutes.springboot.model.Course;
-import com.in28minutes.springboot.service.StudentService;
-
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 @WebMvcTest(value = StudentController.class)
 @WithMockUser
 public class StudentControllerTest {
 
-	@Autowired
-	private MockMvc mockMvc;
+    @Autowired
+    private MockMvc mockMvc;
 
-	@MockBean
-	private StudentService studentService;
+    @MockBean
+    private StudentService studentService;
 
-	Course mockCourse = new Course("Course1", "Spring", "10Steps",
-			Arrays.asList("Learn Maven", "Import Project", "First Example",
-					"Second Example"));
+    Course mockCourse = new Course("Course1", "Spring", "10Steps",
+            List.of("Learn Maven", "Import Project", "First Example", "Second Example"));
 
-	String exampleCourseJson = "{\"name\":\"Spring\",\"description\":\"10Steps\",\"steps\":[\"Learn Maven\",\"Import Project\",\"First Example\",\"Second Example\"]}";
+    String exampleCourseJson = "{\"name\":\"Spring\",\"description\":\"10Steps\",\"steps\":[\"Learn Maven\",\"Import Project\",\"First Example\",\"Second Example\"]}";
 
-	@Test
-	public void retrieveDetailsForCourse() throws Exception {
+    @Test
+    public void retrieveDetailsForCourse() throws Exception {
 
-		Mockito.when(
-				studentService.retrieveCourse(Mockito.anyString(),
-						Mockito.anyString())).thenReturn(mockCourse);
+        Mockito.when(studentService.retrieveCourse(Mockito.anyString(), Mockito.anyString())).thenReturn(mockCourse);
 
-		RequestBuilder requestBuilder = MockMvcRequestBuilders.get(
-				"/students/Student1/courses/Course1").accept(
-				MediaType.APPLICATION_JSON);
+		RequestBuilder requestBuilder = MockMvcRequestBuilders.get("/students/Student1/courses/Course1")
+				.accept(MediaType.APPLICATION_JSON);
 
-		MvcResult result = mockMvc.perform(requestBuilder).andReturn();
+        MvcResult result = mockMvc.perform(requestBuilder).andReturn();
 
-		System.out.println(result.getResponse());
-		String expected = "{id:Course1,name:Spring,description:10Steps}";
+        System.out.println(result.getResponse());
+        String expected = "{id:Course1,name:Spring,description:10Steps}";
 
-		// {"id":"Course1","name":"Spring","description":"10 Steps, 25 Examples and 10K Students","steps":["Learn Maven","Import Project","First Example","Second Example"]}
+        // {"id":"Course1","name":"Spring","description":"10 Steps, 25 Examples and 10K Students","steps":["Learn Maven","Import Project","First Example","Second Example"]}
 
-		JSONAssert.assertEquals(expected, result.getResponse()
-				.getContentAsString(), false);
-	}
+        JSONAssert.assertEquals(expected, result.getResponse().getContentAsString(), false);
+    }
 
-	@Test
-	public void createStudentCourse() throws Exception {
-		Course mockCourse = new Course("1", "Smallest Number", "1",
-				Arrays.asList("1", "2", "3", "4"));
+    @Test
+    public void createStudentCourse() throws Exception {
+        Course mockCourse = new Course("1", "Smallest Number", "1",
+                List.of("1", "2", "3", "4"));
 
-		// studentService.addCourse to respond back with mockCourse
-		Mockito.when(
-				studentService.addCourse(Mockito.anyString(),
-						Mockito.any(Course.class))).thenReturn(mockCourse);
+        // studentService.addCourse to respond back with mockCourse
+        Mockito.when(studentService.addCourse(Mockito.anyString(), Mockito.any(Course.class))).thenReturn(mockCourse);
 
-		// Send course as body to /students/Student1/courses
-		RequestBuilder requestBuilder = MockMvcRequestBuilders
-				.post("/students/Student1/courses")
-				.accept(MediaType.APPLICATION_JSON).content(exampleCourseJson)
-				.contentType(MediaType.APPLICATION_JSON);
+        // Send course as body to /students/Student1/courses
+        RequestBuilder requestBuilder = MockMvcRequestBuilders
+                .post("/students/Student1/courses")
+                .accept(MediaType.APPLICATION_JSON).content(exampleCourseJson)
+                .contentType(MediaType.APPLICATION_JSON);
 
-		MvcResult result = mockMvc.perform(requestBuilder).andReturn();
+        MvcResult result = mockMvc.perform(requestBuilder).andReturn();
 
-		MockHttpServletResponse response = result.getResponse();
+        MockHttpServletResponse response = result.getResponse();
 
-		assertEquals(HttpStatus.CREATED.value(), response.getStatus());
+        assertEquals(HttpStatus.CREATED.value(), response.getStatus());
 
-		assertEquals("http://localhost/students/Student1/courses/1",
-				response.getHeader(HttpHeaders.LOCATION));
+        assertEquals("http://localhost/students/Student1/courses/1", response.getHeader(HttpHeaders.LOCATION));
 
-	}
+    }
 
 }
